2007-07-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Add /etc/NetworkManager/mesh-start which should contain one of:
			"school-mpp", "infra", "xo-mpp", or "local" as a debugging option
			to control what step mesh devices start at
		- Add /etc/NetworkManager/mesh-beacons as a debugging option to control
			whether NM takes advantage of mesh beacons or not

2007-07-20  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (schedule_scan): change 'seconds' type to gint32 because -1 is
			supposed to mean "default", but this wasn't working correctly
			because 'seconds' was unsigned

2007-07-13  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Make mesh start step easier to change for testing
		- (real_init): disable mesh autostart; it's only needed for the
			autonomous mesh dongles

2007-07-12  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (real_activation_success_handler): set an explicit ipv4 multicast
			route when in peer-to-peer mesh mode, otherwise multicast traffic
			can't go anywhere

2007-07-12  Dan Williams  <dcbw@redhat.com>

	* src/backends/NetworkManagerRedHat.c
		- Handle out-of-memory conditions better

2007-07-12  Dan Williams  <dcbw@redhat.com>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (dhclient_run): don't pass G_SPAWN_DO_NOT_REAP_CHILD, let reaping
		    happen automatically

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (get_next_channel): new function; retrieve the next channel taking
			the companion eth device's scan results into account, looking for
			mesh beacons on each channel.  Too bad we can't use this yet though.
		- (channel_failure_handler): use get_next_channel()

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add MESH_OLPC capability for access points

	* src/nm-device-802-11-wireless.c
		- (process_scan_results): detect MESH_OLPC capability on scanned BSSs