@@ -1,3 +1,10 @@
+2007-07-31  Dan Williams  <dcbw@redhat.com>
+
+	* src/nm-device-802-11-wireless.c
+		- (supplicant_exec): pass the -f option to the supplicant based
+			on the existence of /etc/NetworkManager/log-supplicant
+			to log the wpa_supplicant debug output
+
 2007-07-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-mesh-olpc.c
